@startuml

' PATRON STRATEGY

' Interfaz que define el comportamiento comun de todas las estrategias.
interface Estrategia {
    ' Metodo que sera implementado por todas las estrategias concretas.
    + ejecutarEstrategia(a : double, b : double) : double
}

' Clase que utiliza la estrategia.
class Contexto {
    ' Referencia a la estrategia seleccionada.
    - estategia : Estrategia

    ' Constructor que recibe la estrategia a utilizar.
    + Contexto(estrategia : Estrategia)

    ' Permite cambiar la estrategia en tiempo de ejecucion.
    + establecerEstrategia(estrategia : Estrategia) : void

    ' Ejecuta la operacion definida por la estrategia seleccionada.
    + ejecutarEstrategia(a : double, b : double) : double
}

' Estrategia concreta que suma.
class SumaStrategy {
    + ejecutarEstrategia(a : double, b : double) : double
}
' Estrategia concreta que resta.
class RestaStrategy {
    + ejecutarEstrategia(a : double, b : double) : double
}
' Estrategia concreta que multiplica.
class MultiplicacionStrategy {
    + ejecutarEstrategia(a : double, b : double) : double
}

' Las estrategias concretas implementan la interfaz Strategy.
Estrategia <|.. SumaStrategy
Estrategia <|.. RestaStrategy
Estrategia <|.. MultiplicacionStrategy

' El contexto utiliza una estrategia.
Contexto --> Estrategia : utiliza

@enduml
